:sparkles: Intro to HTML

--- a/plp_web_dev/week1_web_dev_assignment/index.html
+++ b/plp_web_dev/week1_web_dev_assignment/index.html
@@ -6,7 +6,7 @@
           <meta name="keyword" content="web development semantic tags">
           <meta name="description" content="This is introduction to HTML">
           <meta name="author" content="Muli Munyoki">
-          
+
           <title>My First Web Page</title>
         </head>
         <body>
@@ -37,7 +37,7 @@
                     </section>
                     <aside>
                         <h3>Quick Links</h3>
-                        <a href="">Additional Resources</a>
+                        <a href="https://github.com/munyokii">Additional Resources</a>
                     </aside>
                 </main>
                 <!-- footer -->
