:sparkles: Week 2 - Enhanced HTML Images, Videos, Forms

--- a/plp_web_dev/week2/index.html
+++ b/plp_web_dev/week2/index.html
@@ -38,5 +38,81 @@
         <li>Ruby</li>
       </ul>
     </ol>
+    <h2>Images</h2>
+    <img src="https://images.pexels.com/photos/32779496/pexels-photo-32779496.jpeg"
+     alt="Forest House"
+     width="500"
+     height="300"
+    >
+    <h2>Table</h2>
+    <table border="i">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Gender</th>
+          <th>Country</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            John
+          </td>
+          <td>Male</td>
+          <td>SA</td>
+        </tr>
+        <tr>
+          <td>Jane</td>
+          <td>Female</td>
+          <td>Angola</td>
+        </tr>
+        <tr>
+          <td>Maasai</td>
+          <td>Male</td>
+          <td>Kenya</td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>Embedding Videos & Audio</h2>
+    <video 
+      src="https://videos.pexels.com/video-files/32771040/13969682_2560_1440_25fps.mp4"
+      width="500"
+      height=""
+      controls
+      type="video/mp4"
+    >
+      Your browser does not support the videos.
+    </video>
+    <audio 
+      src=""
+      type="audio/mpeg"
+    >
+      Your browser does not support audio playback.
+    </audio>
+    <h2>Forms</h2>
+    <form action="" method="post">
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" placeholder="Enter your name here...">
+      <br /><br />
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" placeholder="Enter your email here...">
+      <br /><br />
+      <label for="age">Age:</label>
+      <input type="number" name="age" id="age" placeholder="Enter your age here...">
+      <br /><br />
+      <label for="email">Date of Birth:</label>
+      <input type="date" name="dob" id="dob" placeholder="Enter your dob here...">
+      <br /><br />
+      <label for="gender">Date of Birth:</label>
+      <input type="radio" name="gender" value="Male">Male
+      <input type="radio" name="gender" value="Female">Female
+      <br><br>
+      <label for="cv">UploadCV</label>
+      <input type="file" name="cv" id="cv">
+      <br><br>
+      <label for="bio">Bio</label>
+      <textarea name="bio" id="" cols="30" rows="10"></textarea>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
