:sparkles: Lists in Python

--- a/plp_web_dev/week1_web_dev_assignment/index.html
+++ b/plp_web_dev/week1_web_dev_assignment/index.html
@@ -24,6 +24,7 @@
                <!-- main content -->
                 <main>
                     <article>
+                        <input type="drop">
                         <p>What can we write about today?</p>
                         <p>Welcome to my</p>
                     </article>
