--- a/plp_web_dev/week2/index.html
+++ b/plp_web_dev/week2/index.html
@@ -114,5 +114,7 @@
       <textarea name="bio" id="" cols="30" rows="10"></textarea>
       <button type="submit">Submit</button>
     </form>
+    <h2>Youtube Video</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/i9SdGSC8jQQ?si=4m3XQzua3NXTE4Tc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
