:sparkles: CSS Layouts & Responsive Web Design

--- a/plp_web_dev/week4/index.html
+++ b/plp_web_dev/week4/index.html
@@ -29,5 +29,6 @@
   <div class="container">
     <p id="p-one">Block level element inside a div.</p>
   </div>
+  <img src="https://images.pexels.com/photos/57409/ford-mustang-stallion-red-57409.jpeg" alt="image">
 </body>
 </html>
